# kvs

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md
.github/workflows/: kvs_build.yml
src/: lib.rs
src/lang/: mod.rs
src/options/: mod.rs
src/store/: entry.rs  error.rs  kvstore.rs  mod.rs  path_buf.rs  permissions.rs  position.rs  reader.rs  writer.rs
tests/: cli.rs  kv_store.rs  tests.rs
