[package]
name = "kvs"
version = "0.1.0"
authors = ["Reese Williams <reese@reesew.io>"]
description = "A command-line key-value store."
edition = "2018"

[dependencies]
failure = "0.1.6"
structopt = "0.3"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
rusty-hook = "^0.10.1"
tempfile = "3.1.0"
walkdir = "2.3.1"
