[package]
name = "kvs"
version = "0.1.0"
authors = ["Reese Williams <reese@reesew.io>"]
description = "A command-line key-value store."
edition = "2018"

[dependencies]
failure = "0.1.6"
log = "0.4.8"
serde = "1.0.104"
serde_json = "1.0.44"
stderrlog = "0.4.3"
structopt = "0.3"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
